syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;
option go_package = "app/river-management/handlers/grpc/grpchandler";

service Service {
	rpc GetModuleByPhonenumber(GetModuleRequest) returns (Module);
	rpc UpdateModuleStatus(UpdateModuleRequest) returns (google.protobuf.Empty) {};
}

message UpdateModuleRequest {
	string moduleID = 1;
	string status = 2;
}

message GetModuleRequest {
    string phoneNumber = 1;
}

message Module {
    string moduleID = 1;
	string phoneNumber = 2;
	string alias = 3;            
	string riverID = 4;      
	string riverName = 5;    
	string userID = 6;       
	int64 creationDate = 7; 
	int64 updateDate = 8;   
	string currentstate = 9; 
	string serial = 10;             
	Point location = 11;
}

message Point {
    double latitude = 1;
    double longitude = 64;
}